fixed issue with editor height on IE11

--- a/src/app/components/product-editor/product-editor.component.scss
+++ b/src/app/components/product-editor/product-editor.component.scss
@@ -33,4 +33,5 @@
 }
 ::ng-deep .ui-dialog{
   width: 70%;
+  height: 85%;
 }
