--- a/src/app/components/promotion-editor/promotion-editor.component.scss
+++ b/src/app/components/promotion-editor/promotion-editor.component.scss
@@ -24,4 +24,5 @@
 }
 ::ng-deep .ui-dialog{
   width: 70%;
+  height: 85%;
 }
